// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapHTTPTransactionWithMethodOverride should let normal methods pass 1`] = `
{
  "data": "",
  "getPingCalls": [
    [
      {
        "body": undefined,
        "cookie": {},
        "header": {},
        "options": {},
        "path": {},
        "query": {},
      },
      {
        "method": "get",
        "operation": {
          "operationId": "getPing",
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "additionalProperties": false,
                    "properties": {
                      "pong": {
                        "enum": [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": [
            "system",
          ],
        },
        "path": "/v1/ping",
      },
    ],
  ],
  "headers": {
    "connection": undefined,
    "date": undefined,
    "etag": undefined,
    "keep-alive": undefined,
    "last-modified": undefined,
    "server": undefined,
    "transaction-id": "1",
    "transfer-encoding": "chunked",
  },
  "status": 200,
}
`;

exports[`wrapHTTPTransactionWithMethodOverride should override methods 1`] = `
{
  "data": "",
  "getPingCalls": [
    [
      {
        "body": undefined,
        "cookie": {},
        "header": {},
        "options": {},
        "path": {},
        "query": {},
      },
      {
        "method": "get",
        "operation": {
          "operationId": "getPing",
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "additionalProperties": false,
                    "properties": {
                      "pong": {
                        "enum": [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": [
            "system",
          ],
        },
        "path": "/v1/ping",
      },
    ],
  ],
  "headers": {
    "connection": undefined,
    "date": undefined,
    "etag": undefined,
    "keep-alive": undefined,
    "last-modified": undefined,
    "server": undefined,
    "transaction-id": "0",
    "transfer-encoding": "chunked",
  },
  "status": 200,
}
`;
